--- a/ArtFinder/Base.lproj/Main.storyboard
+++ b/ArtFinder/Base.lproj/Main.storyboard
@@ -37,8 +37,8 @@
                                                         <constraint firstAttribute="width" constant="200" id="31w-Qp-5o3"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="39H-G7-dxy">
-                                                    <rect key="frame" x="228" y="19" width="158" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="39H-G7-dxy">
+                                                    <rect key="frame" x="228" y="19" width="158" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -56,6 +56,7 @@
                                         <connections>
                                             <outlet property="artistImageView" destination="JFT-dn-96r" id="hhL-UP-Njd"/>
                                             <outlet property="artistNameLabel" destination="39H-G7-dxy" id="hgd-m7-vUA"/>
+                                            <segue destination="tpI-MD-Y2R" kind="show" id="5yT-U4-aKI"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -81,6 +82,116 @@
                 </viewController>
             </objects>
             <point key="canvasLocation" x="1268" y="117"/>
+        </scene>
+        <!--Artist View Controller-->
+        <scene sceneID="MbR-XK-pCR">
+            <objects>
+                <viewController id="tpI-MD-Y2R" customClass="ArtistViewController" customModule="ArtFinder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qdu-QF-Din">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9gD-Lt-I1z">
+                                <rect key="frame" x="0.0" y="88" width="414" height="179"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year Born to Year Died" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCx-qy-5mE">
+                                <rect key="frame" x="8" y="275" width="398" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nationality" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pY9-Sk-xrB">
+                                <rect key="frame" x="8" y="304" width="398" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Euv-J0-caC">
+                                <rect key="frame" x="8" y="333" width="398" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bIU-gK-g4a">
+                                <rect key="frame" x="0.0" y="373.5" width="414" height="439.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="artistCell" rowHeight="130" id="WVw-d8-m7g">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WVw-d8-m7g" id="gvf-N7-joI">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paintbrush" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3Uq-B2-1Gi">
+                                                    <rect key="frame" x="20" y="18.5" width="200" height="92.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="i1f-DM-Yci"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artwork title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UVC-CN-qkE">
+                                                    <rect key="frame" x="228" y="19" width="158" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XnD-2P-5Uf">
+                                                    <rect key="frame" x="228" y="90" width="158" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="XnD-2P-5Uf" secondAttribute="bottom" constant="8" id="8dF-g0-tG6"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="UVC-CN-qkE" secondAttribute="trailing" constant="8" id="BjO-sI-b3z"/>
+                                                <constraint firstItem="UVC-CN-qkE" firstAttribute="top" secondItem="gvf-N7-joI" secondAttribute="topMargin" constant="8" id="Bki-fK-qjh"/>
+                                                <constraint firstItem="XnD-2P-5Uf" firstAttribute="leading" secondItem="3Uq-B2-1Gi" secondAttribute="trailing" constant="8" id="P7i-op-nad"/>
+                                                <constraint firstItem="3Uq-B2-1Gi" firstAttribute="leading" secondItem="gvf-N7-joI" secondAttribute="leading" constant="20" symbolic="YES" id="auT-LM-GAL"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XnD-2P-5Uf" secondAttribute="trailing" constant="8" id="fej-0q-hIw"/>
+                                                <constraint firstAttribute="bottom" secondItem="3Uq-B2-1Gi" secondAttribute="bottom" constant="20" symbolic="YES" id="oXN-0e-9Ar"/>
+                                                <constraint firstItem="3Uq-B2-1Gi" firstAttribute="top" secondItem="gvf-N7-joI" secondAttribute="top" constant="20" symbolic="YES" id="qnf-wv-U8e"/>
+                                                <constraint firstItem="UVC-CN-qkE" firstAttribute="leading" secondItem="3Uq-B2-1Gi" secondAttribute="trailing" constant="8" id="u3P-yw-8HR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="9gD-Lt-I1z" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" id="3ap-Z7-CKm"/>
+                            <constraint firstItem="bIU-gK-g4a" firstAttribute="bottom" secondItem="TzH-YT-GZu" secondAttribute="bottom" id="3r9-m4-7V4"/>
+                            <constraint firstItem="cCx-qy-5mE" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="Anx-VS-N4q"/>
+                            <constraint firstItem="bIU-gK-g4a" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" id="C71-cw-Sc8"/>
+                            <constraint firstItem="Euv-J0-caC" firstAttribute="top" secondItem="pY9-Sk-xrB" secondAttribute="bottom" constant="8" id="CDx-oc-mSZ"/>
+                            <constraint firstItem="9gD-Lt-I1z" firstAttribute="height" secondItem="Qdu-QF-Din" secondAttribute="height" multiplier="0.2" id="Ehb-JW-wFi"/>
+                            <constraint firstItem="cCx-qy-5mE" firstAttribute="top" secondItem="9gD-Lt-I1z" secondAttribute="bottom" constant="8" id="HCD-NC-fTz"/>
+                            <constraint firstItem="pY9-Sk-xrB" firstAttribute="top" secondItem="cCx-qy-5mE" secondAttribute="bottom" constant="8" id="HNM-cg-nfq"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="bIU-gK-g4a" secondAttribute="trailing" id="MlS-C4-8HH"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="pY9-Sk-xrB" secondAttribute="trailing" constant="8" id="VwN-nC-hVQ"/>
+                            <constraint firstItem="pY9-Sk-xrB" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="YnL-wN-BNp"/>
+                            <constraint firstItem="9gD-Lt-I1z" firstAttribute="top" secondItem="TzH-YT-GZu" secondAttribute="top" id="fRa-nq-v63"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="cCx-qy-5mE" secondAttribute="trailing" constant="8" id="hdq-Ur-pAe"/>
+                            <constraint firstItem="Euv-J0-caC" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="hzM-HM-ODu"/>
+                            <constraint firstItem="bIU-gK-g4a" firstAttribute="top" secondItem="Euv-J0-caC" secondAttribute="bottom" constant="20" id="jdj-xR-MQQ"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="9gD-Lt-I1z" secondAttribute="trailing" id="kWY-t5-ncr"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="Euv-J0-caC" secondAttribute="trailing" constant="8" id="raw-ZB-pcN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="TzH-YT-GZu"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fvJ-ek-JPA"/>
+                    <connections>
+                        <outlet property="artistBio" destination="Euv-J0-caC" id="v1l-pS-hrL"/>
+                        <outlet property="artistImage" destination="9gD-Lt-I1z" id="hkN-qF-DYU"/>
+                        <outlet property="nationalityLabel" destination="pY9-Sk-xrB" id="p7C-Lf-hdy"/>
+                        <outlet property="tableView" destination="bIU-gK-g4a" id="dHZ-zd-tWM"/>
+                        <outlet property="yearsAliveLabel" destination="cCx-qy-5mE" id="bK7-YF-c83"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f8W-1p-X8O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1918.840579710145" y="114.50892857142857"/>
         </scene>
         <!--Art Finder-->
         <scene sceneID="t0p-Iz-zTy">
@@ -122,5 +233,6 @@
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+        <image name="paintbrush" catalog="system" width="64" height="64"/>
     </resources>
 </document>
