--- a/ArtFinder/Base.lproj/Main.storyboard
+++ b/ArtFinder/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ElB-zj-Jtr">
+                            <searchBar contentMode="redraw" placeholder="search by artist" translatesAutoresizingMaskIntoConstraints="NO" id="ElB-zj-Jtr">
                                 <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
