--- a/ArtFinder/Base.lproj/Main.storyboard
+++ b/ArtFinder/Base.lproj/Main.storyboard
@@ -91,23 +91,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9gD-Lt-I1z">
-                                <rect key="frame" x="0.0" y="88" width="414" height="179"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9gD-Lt-I1z">
+                                <rect key="frame" x="0.0" y="88" width="414" height="358.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year Born to Year Died" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCx-qy-5mE">
-                                <rect key="frame" x="8" y="275" width="398" height="21"/>
+                                <rect key="frame" x="8" y="454.5" width="398" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nationality" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pY9-Sk-xrB">
-                                <rect key="frame" x="8" y="304" width="398" height="21"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Euv-J0-caC">
-                                <rect key="frame" x="8" y="333" width="398" height="20.5"/>
+                                <rect key="frame" x="8" y="483.5" width="398" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -119,30 +113,38 @@
                                     <segue destination="Mte-AU-9yC" kind="show" id="kZn-IV-arc"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiZ-B7-u6G">
+                                <rect key="frame" x="8" y="512.5" width="398" height="254.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="9gD-Lt-I1z" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" id="3ap-Z7-CKm"/>
                             <constraint firstItem="cCx-qy-5mE" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="Anx-VS-N4q"/>
-                            <constraint firstItem="Euv-J0-caC" firstAttribute="top" secondItem="pY9-Sk-xrB" secondAttribute="bottom" constant="8" id="CDx-oc-mSZ"/>
-                            <constraint firstItem="9gD-Lt-I1z" firstAttribute="height" secondItem="Qdu-QF-Din" secondAttribute="height" multiplier="0.2" id="Ehb-JW-wFi"/>
+                            <constraint firstItem="9gD-Lt-I1z" firstAttribute="height" secondItem="Qdu-QF-Din" secondAttribute="height" multiplier="0.4" id="Ehb-JW-wFi"/>
                             <constraint firstItem="cCx-qy-5mE" firstAttribute="top" secondItem="9gD-Lt-I1z" secondAttribute="bottom" constant="8" id="HCD-NC-fTz"/>
                             <constraint firstItem="pY9-Sk-xrB" firstAttribute="top" secondItem="cCx-qy-5mE" secondAttribute="bottom" constant="8" id="HNM-cg-nfq"/>
+                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="wiZ-B7-u6G" secondAttribute="trailing" constant="8" id="VTa-IU-LxT"/>
                             <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="pY9-Sk-xrB" secondAttribute="trailing" constant="8" id="VwN-nC-hVQ"/>
                             <constraint firstItem="TzH-YT-GZu" firstAttribute="bottom" secondItem="9j9-eq-pPe" secondAttribute="bottom" constant="8" id="Wsz-v6-l6M"/>
                             <constraint firstItem="pY9-Sk-xrB" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="YnL-wN-BNp"/>
+                            <constraint firstItem="wiZ-B7-u6G" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="bNH-s1-8H7"/>
                             <constraint firstItem="9gD-Lt-I1z" firstAttribute="top" secondItem="TzH-YT-GZu" secondAttribute="top" id="fRa-nq-v63"/>
                             <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="cCx-qy-5mE" secondAttribute="trailing" constant="8" id="hdq-Ur-pAe"/>
-                            <constraint firstItem="Euv-J0-caC" firstAttribute="leading" secondItem="TzH-YT-GZu" secondAttribute="leading" constant="8" id="hzM-HM-ODu"/>
                             <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="9gD-Lt-I1z" secondAttribute="trailing" id="kWY-t5-ncr"/>
+                            <constraint firstItem="wiZ-B7-u6G" firstAttribute="top" secondItem="pY9-Sk-xrB" secondAttribute="bottom" constant="8" id="lmA-OL-veb"/>
                             <constraint firstItem="9j9-eq-pPe" firstAttribute="centerX" secondItem="Qdu-QF-Din" secondAttribute="centerX" id="qS3-h3-KqB"/>
-                            <constraint firstItem="TzH-YT-GZu" firstAttribute="trailing" secondItem="Euv-J0-caC" secondAttribute="trailing" constant="8" id="raw-ZB-pcN"/>
+                            <constraint firstItem="9j9-eq-pPe" firstAttribute="top" secondItem="wiZ-B7-u6G" secondAttribute="bottom" constant="8" id="zIh-15-Q99"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TzH-YT-GZu"/>
                     </view>
                     <navigationItem key="navigationItem" id="fvJ-ek-JPA"/>
                     <connections>
-                        <outlet property="artistBio" destination="Euv-J0-caC" id="v1l-pS-hrL"/>
+                        <outlet property="artistBio" destination="wiZ-B7-u6G" id="jzl-ei-jmV"/>
                         <outlet property="artistImage" destination="9gD-Lt-I1z" id="hkN-qF-DYU"/>
                         <outlet property="nationalityLabel" destination="pY9-Sk-xrB" id="p7C-Lf-hdy"/>
                         <outlet property="yearsAliveLabel" destination="cCx-qy-5mE" id="bK7-YF-c83"/>
