--- a/ArtFinder/Base.lproj/Main.storyboard
+++ b/ArtFinder/Base.lproj/Main.storyboard
@@ -162,53 +162,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WYq-HP-S54">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mJW-cG-1gV">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="artistCell" rowHeight="130" id="rQ9-x7-zHZ" customClass="ArtistCell" customModule="ArtFinder" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="130"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="artistCell" rowHeight="158" id="DcJ-ZZ-hpO" customClass="ArtistCell" customModule="ArtFinder" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="158"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rQ9-x7-zHZ" id="3eg-vA-bCf">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DcJ-ZZ-hpO" id="8I4-AI-kfW">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="158"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paintbrush" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Q1k-9U-F6Y">
-                                                    <rect key="frame" x="20" y="18.5" width="200" height="92.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2cl-8T-4Pr">
+                                                    <rect key="frame" x="20" y="11" width="200" height="136"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="200" id="agS-Af-W7D"/>
+                                                        <constraint firstAttribute="width" constant="200" id="YdF-nA-p3a"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artwork title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10F-km-OZT">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="artwork name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwH-J3-r4G">
                                                     <rect key="frame" x="228" y="19" width="158" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5He-FE-N35">
-                                                    <rect key="frame" x="228" y="90" width="158" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSJ-3Q-Yqm">
+                                                    <rect key="frame" x="228" y="137" width="158" height="18"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="10F-km-OZT" firstAttribute="top" secondItem="3eg-vA-bCf" secondAttribute="topMargin" constant="8" id="83I-A4-Ciq"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="5He-FE-N35" secondAttribute="trailing" constant="8" id="GHZ-wW-hcp"/>
-                                                <constraint firstItem="Q1k-9U-F6Y" firstAttribute="top" secondItem="3eg-vA-bCf" secondAttribute="top" constant="20" symbolic="YES" id="HVA-v3-fgG"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="10F-km-OZT" secondAttribute="trailing" constant="8" id="Kod-aX-dir"/>
-                                                <constraint firstItem="10F-km-OZT" firstAttribute="leading" secondItem="Q1k-9U-F6Y" secondAttribute="trailing" constant="8" id="TlC-1N-OUU"/>
-                                                <constraint firstItem="Q1k-9U-F6Y" firstAttribute="leading" secondItem="3eg-vA-bCf" secondAttribute="leading" constant="20" symbolic="YES" id="TlJ-tt-ggv"/>
-                                                <constraint firstAttribute="bottom" secondItem="Q1k-9U-F6Y" secondAttribute="bottom" constant="20" symbolic="YES" id="dW3-Od-1MV"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="5He-FE-N35" secondAttribute="bottom" constant="8" id="iX8-me-5RN"/>
-                                                <constraint firstItem="5He-FE-N35" firstAttribute="leading" secondItem="Q1k-9U-F6Y" secondAttribute="trailing" constant="8" id="yQ9-U9-he1"/>
+                                                <constraint firstItem="2cl-8T-4Pr" firstAttribute="leading" secondItem="8I4-AI-kfW" secondAttribute="leadingMargin" id="5cI-p8-UGe"/>
+                                                <constraint firstItem="DwH-J3-r4G" firstAttribute="top" secondItem="8I4-AI-kfW" secondAttribute="topMargin" constant="8" id="7MK-pR-ATj"/>
+                                                <constraint firstItem="2cl-8T-4Pr" firstAttribute="top" secondItem="8I4-AI-kfW" secondAttribute="topMargin" id="Jk2-qR-PrB"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="DwH-J3-r4G" secondAttribute="trailing" constant="8" id="Pih-f0-Bgm"/>
+                                                <constraint firstItem="JSJ-3Q-Yqm" firstAttribute="bottom" secondItem="8I4-AI-kfW" secondAttribute="bottomMargin" constant="8" id="S54-AI-op8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="JSJ-3Q-Yqm" secondAttribute="trailing" constant="8" id="eTv-B0-0ge"/>
+                                                <constraint firstItem="DwH-J3-r4G" firstAttribute="leading" secondItem="2cl-8T-4Pr" secondAttribute="trailing" constant="8" id="elC-RC-t7G"/>
+                                                <constraint firstItem="JSJ-3Q-Yqm" firstAttribute="leading" secondItem="2cl-8T-4Pr" secondAttribute="trailing" constant="8" id="eu0-p0-EOg"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="2cl-8T-4Pr" secondAttribute="bottom" id="moP-F7-ZXm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="artworkDateLabel" destination="5He-FE-N35" id="tyI-si-fvw"/>
-                                            <outlet property="artworkImage" destination="Q1k-9U-F6Y" id="opX-WA-SsY"/>
-                                            <outlet property="artworkTitle" destination="10F-km-OZT" id="qXS-6X-aR7"/>
-                                            <segue destination="2sa-Y9-gJo" kind="show" id="nwz-ZR-cw2"/>
+                                            <outlet property="artworkDateLabel" destination="JSJ-3Q-Yqm" id="SSf-MD-6NT"/>
+                                            <outlet property="artworkImage" destination="2cl-8T-4Pr" id="FF3-3g-JJB"/>
+                                            <outlet property="artworkTitle" destination="DwH-J3-r4G" id="JG6-zI-Wcy"/>
+                                            <segue destination="2sa-Y9-gJo" kind="show" id="xxK-hE-ZhT"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -216,21 +216,21 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="WYq-HP-S54" firstAttribute="leading" secondItem="i0H-ig-bHs" secondAttribute="leading" id="ASd-yd-D42"/>
-                            <constraint firstItem="WYq-HP-S54" firstAttribute="top" secondItem="i0H-ig-bHs" secondAttribute="top" id="GEC-Xx-wRa"/>
-                            <constraint firstItem="i0H-ig-bHs" firstAttribute="bottom" secondItem="WYq-HP-S54" secondAttribute="bottom" id="pdb-jo-Bnr"/>
-                            <constraint firstItem="i0H-ig-bHs" firstAttribute="trailing" secondItem="WYq-HP-S54" secondAttribute="trailing" id="zal-KI-Coy"/>
+                            <constraint firstItem="mJW-cG-1gV" firstAttribute="top" secondItem="i0H-ig-bHs" secondAttribute="top" id="Abm-qV-CfG"/>
+                            <constraint firstItem="i0H-ig-bHs" firstAttribute="trailing" secondItem="mJW-cG-1gV" secondAttribute="trailing" id="FY6-w1-gGn"/>
+                            <constraint firstItem="mJW-cG-1gV" firstAttribute="leading" secondItem="i0H-ig-bHs" secondAttribute="leading" id="dBR-dK-LIb"/>
+                            <constraint firstItem="i0H-ig-bHs" firstAttribute="bottom" secondItem="mJW-cG-1gV" secondAttribute="bottom" id="jCT-R0-ux2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="i0H-ig-bHs"/>
                     </view>
                     <navigationItem key="navigationItem" id="uuI-hp-ExH"/>
                     <connections>
-                        <outlet property="tableview" destination="WYq-HP-S54" id="VVM-e7-43A"/>
+                        <outlet property="tableview" destination="mJW-cG-1gV" id="tDf-eO-Yi3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tw6-JF-XMR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2578" y="115"/>
+            <point key="canvasLocation" x="2576.811594202899" y="114.50892857142857"/>
         </scene>
         <!--Artwork Detail View Controller-->
         <scene sceneID="AyF-CU-cC8">
@@ -352,6 +352,5 @@
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
-        <image name="paintbrush" catalog="system" width="64" height="64"/>
     </resources>
 </document>
